[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-mcp-server"
version = "0.1.0"
description = "Health and medical data for AI agents — WHO disease data, drug info, clinical trials, health statistics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "health", "medical", "who", "drugs", "clinical-trials"]
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0", "pydantic>=2.0.0"]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/health-mcp-server"
Repository = "https://github.com/AiAgentKarl/health-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src"]
